package com.structural.ProxyPattern.Exercise1;


public interface ISP {

    String serverSite(String url);
}
